Fixed login input not rendering correctly when it had focus on mobile.

--- a/frontend/src/components/input/text/Text.module.css
+++ b/frontend/src/components/input/text/Text.module.css
@@ -5,13 +5,14 @@
 	padding-top:14px;
 	position:relative;
 	transition: all 1s;
-	&:focus-within {
-		padding-top: 24px;
-		.label {
-      		left: 1%;  /* Move to the left when focused */
-			background-color:inherit;
-		}
-	}
+}
+.Container:focus-within {
+  padding-top: 24px;  /* Increase the padding when the input is focused */
+}
+
+.Container:focus-within .label {
+  left: 1%;  /* Move the label to the left when the input is focused */
+  background-color: inherit;  /* Make the background transparent */
 }
 
 .input {
@@ -21,6 +22,7 @@
 	font-size:large;
 	width: 100%;
 	min-height: 30px;
+	border:0px;
 	border-radius: 6px;
 	border: 3px #252323 solid;
 }
